--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.8'
+version: '2.2'
 services:
   es01:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.17.10
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
     container_name: es01
     environment:
       - node.name=es01
@@ -14,5 +14,9 @@ services:
       memlock:
         soft: -1
         hard: -1
+    volumes:
+      - data01:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
+    networks:
+      - elastic
