--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -2,4 +2,7 @@ FROM docker.elastic.co/elasticsearch/elasticsearch:7.17.10
 
 COPY elasticsearch.yml /usr/share/elasticsearch/config/
 
+EXPOSE 9200
+EXPOSE 9300
+
 CMD ["elasticsearch"]
